Added new tests for avoidance and spatial reasoning

--- a/notebooks/006_automatic_creation_of_arenas.ipynb
+++ b/notebooks/006_automatic_creation_of_arenas.ipynb
@@ -7,7 +7,7 @@
    },
    "source": [
     "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
-    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Automatic-creation-of-arenas\" data-toc-modified-id=\"Automatic-creation-of-arenas-1\">Automatic creation of arenas</a></span><ul class=\"toc-item\"><li><span><a href=\"#Imports\" data-toc-modified-id=\"Imports-1.1\">Imports</a></span></li><li><span><a href=\"#Arena\" data-toc-modified-id=\"Arena-1.2\">Arena</a></span></li><li><span><a href=\"#Items\" data-toc-modified-id=\"Items-1.3\">Items</a></span></li><li><span><a href=\"#Creating-a-simple-arena\" data-toc-modified-id=\"Creating-a-simple-arena-1.4\">Creating a simple arena</a></span></li><li><span><a href=\"#Loading-and-modifying-arenas\" data-toc-modified-id=\"Loading-and-modifying-arenas-1.5\">Loading and modifying arenas</a></span></li><li><span><a href=\"#Removing-colors-and-changing-time-limit\" data-toc-modified-id=\"Removing-colors-and-changing-time-limit-1.6\">Removing colors and changing time limit</a></span></li><li><span><a href=\"#Creating-first-arenas\" data-toc-modified-id=\"Creating-first-arenas-1.7\">Creating first arenas</a></span><ul class=\"toc-item\"><li><span><a href=\"#Agent-looking-center\" data-toc-modified-id=\"Agent-looking-center-1.7.1\">Agent looking center</a></span></li><li><span><a href=\"#Bad-goal-moving-towards-the-agent\" data-toc-modified-id=\"Bad-goal-moving-towards-the-agent-1.7.2\">Bad goal moving towards the agent</a></span></li><li><span><a href=\"#Green-and-yellow-goal-in-front-of-agent\" data-toc-modified-id=\"Green-and-yellow-goal-in-front-of-agent-1.7.3\">Green and yellow goal in front of agent</a></span></li></ul></li><li><span><a href=\"#Creating-arenas-for-food-category\" data-toc-modified-id=\"Creating-arenas-for-food-category-1.8\">Creating arenas for food category</a></span></li><li><span><a href=\"#Creating-arenas-for-preferences-category\" data-toc-modified-id=\"Creating-arenas-for-preferences-category-1.9\">Creating arenas for preferences category</a></span></li><li><span><a href=\"#Single-file-for-easier-training\" data-toc-modified-id=\"Single-file-for-easier-training-1.10\">Single file for easier training</a></span></li><li><span><a href=\"#Single-file-with-all-categories-using-weights\" data-toc-modified-id=\"Single-file-with-all-categories-using-weights-1.11\">Single file with all categories using weights</a></span></li><li><span><a href=\"#Creating-arenas-for-obstacles-category\" data-toc-modified-id=\"Creating-arenas-for-obstacles-category-1.12\">Creating arenas for obstacles category</a></span></li><li><span><a href=\"#Creating-new-tests\" data-toc-modified-id=\"Creating-new-tests-1.13\">Creating new tests</a></span><ul class=\"toc-item\"><li><span><a href=\"#Obstacles\" data-toc-modified-id=\"Obstacles-1.13.1\">Obstacles</a></span></li></ul></li></ul></li></ul></div>"
+    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Automatic-creation-of-arenas\" data-toc-modified-id=\"Automatic-creation-of-arenas-1\">Automatic creation of arenas</a></span><ul class=\"toc-item\"><li><span><a href=\"#Imports\" data-toc-modified-id=\"Imports-1.1\">Imports</a></span></li><li><span><a href=\"#Arena\" data-toc-modified-id=\"Arena-1.2\">Arena</a></span></li><li><span><a href=\"#Items\" data-toc-modified-id=\"Items-1.3\">Items</a></span></li><li><span><a href=\"#Creating-a-simple-arena\" data-toc-modified-id=\"Creating-a-simple-arena-1.4\">Creating a simple arena</a></span></li><li><span><a href=\"#Loading-and-modifying-arenas\" data-toc-modified-id=\"Loading-and-modifying-arenas-1.5\">Loading and modifying arenas</a></span></li><li><span><a href=\"#Removing-colors-and-changing-time-limit\" data-toc-modified-id=\"Removing-colors-and-changing-time-limit-1.6\">Removing colors and changing time limit</a></span></li><li><span><a href=\"#Creating-first-arenas\" data-toc-modified-id=\"Creating-first-arenas-1.7\">Creating first arenas</a></span><ul class=\"toc-item\"><li><span><a href=\"#Agent-looking-center\" data-toc-modified-id=\"Agent-looking-center-1.7.1\">Agent looking center</a></span></li><li><span><a href=\"#Bad-goal-moving-towards-the-agent\" data-toc-modified-id=\"Bad-goal-moving-towards-the-agent-1.7.2\">Bad goal moving towards the agent</a></span></li><li><span><a href=\"#Green-and-yellow-goal-in-front-of-agent\" data-toc-modified-id=\"Green-and-yellow-goal-in-front-of-agent-1.7.3\">Green and yellow goal in front of agent</a></span></li></ul></li><li><span><a href=\"#Creating-arenas-for-food-category\" data-toc-modified-id=\"Creating-arenas-for-food-category-1.8\">Creating arenas for food category</a></span></li><li><span><a href=\"#Creating-arenas-for-preferences-category\" data-toc-modified-id=\"Creating-arenas-for-preferences-category-1.9\">Creating arenas for preferences category</a></span></li><li><span><a href=\"#Single-file-for-easier-training\" data-toc-modified-id=\"Single-file-for-easier-training-1.10\">Single file for easier training</a></span></li><li><span><a href=\"#Single-file-with-all-categories-using-weights\" data-toc-modified-id=\"Single-file-with-all-categories-using-weights-1.11\">Single file with all categories using weights</a></span></li><li><span><a href=\"#Creating-arenas-for-obstacles-category\" data-toc-modified-id=\"Creating-arenas-for-obstacles-category-1.12\">Creating arenas for obstacles category</a></span></li><li><span><a href=\"#Creating-new-tests\" data-toc-modified-id=\"Creating-new-tests-1.13\">Creating new tests</a></span><ul class=\"toc-item\"><li><span><a href=\"#Obstacles\" data-toc-modified-id=\"Obstacles-1.13.1\">Obstacles</a></span></li><li><span><a href=\"#Avoidance\" data-toc-modified-id=\"Avoidance-1.13.2\">Avoidance</a></span></li><li><span><a href=\"#Spatial-reasoning\" data-toc-modified-id=\"Spatial-reasoning-1.13.3\">Spatial reasoning</a></span></li></ul></li></ul></li></ul></div>"
    ]
   },
   {
@@ -4936,7 +4936,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "### Obstacles"
    ]
@@ -4948,7 +4950,8 @@
     "ExecuteTime": {
      "end_time": "2019-10-14T16:46:17.850693Z",
      "start_time": "2019-10-14T16:46:17.839210Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -4975,7 +4978,8 @@
     "ExecuteTime": {
      "end_time": "2019-10-14T16:44:55.822076Z",
      "start_time": "2019-10-14T16:44:55.809890Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -4989,13 +4993,14 @@
     "ExecuteTime": {
      "end_time": "2019-10-14T16:48:36.964219Z",
      "start_time": "2019-10-14T16:48:36.222154Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b8cc4cceb934499390afd350803b794f",
+       "model_id": "",
        "version_major": 2,
        "version_minor": 0
       },
@@ -5032,19 +5037,209 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "heading_collapsed": true
+   },
+   "source": [
+    "### Avoidance"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 12,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-10-14T17:03:54.945965Z",
+     "start_time": "2019-10-14T17:03:54.927331Z"
+    },
+    "hidden": true
+   },
    "outputs": [],
    "source": [
-    "folderpath = '/media/guillermo/Data/Kaggle/animalai/agents/114_megatrain/data/train_015_fpoasgi_500'\n",
-    "os.makedirs(folderpath, exist_ok=True)\n",
-    "for idx in range(128):\n",
-    "    arena_config = generate_arena_config(t=500, n=1)\n",
-    "    print(len(arena_config.arenas))\n",
-    "    with open('%s/%03d.yaml' % (folderpath, idx), 'w') as f:\n",
-    "        yaml.dump(arena_config, f)"
+    "from orangutan.arenas.avoidance import (\n",
+    "    create_arena_with_obstacles_and_deathzones,\n",
+    "    create_center_blocked_arena_deathzone,\n",
+    "    create_arena_splitted_in_two_deathzone,\n",
+    "    create_arena_splitted_in_four_deathzone,\n",
+    "    create_arena_splitted_in_two_with_path_blocked_deathzone,\n",
+    ")\n",
+    "func_list = [\n",
+    "    create_arena_with_obstacles_and_deathzones,\n",
+    "    create_arena_splitted_in_two_deathzone,\n",
+    "    create_arena_splitted_in_four_deathzone,\n",
+    "    create_arena_splitted_in_two_with_path_blocked_deathzone,\n",
+    "]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-10-14T17:03:57.072514Z",
+     "start_time": "2019-10-14T17:03:57.037004Z"
+    },
+    "hidden": true
+   },
+   "outputs": [],
+   "source": [
+    "folder_path = \"/media/guillermo/Data/Dropbox/02 Inteligencia Artificial/31_animalai/orangutan/scripts/test_submission/configs/04_avoidance\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-10-14T17:03:59.846805Z",
+     "start_time": "2019-10-14T17:03:59.035484Z"
+    },
+    "hidden": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(IntProgress(value=0, max=4), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "arena_with_obstacles_and_deathzones\n",
+      "arena_splitted_in_two_deathzone\n",
+      "arena_splitted_in_four_deathzone\n",
+      "arena_splitted_in_two_with_path_blocked_deathzone\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "for func in tqdm(func_list):\n",
+    "    name = '_'.join(func.__name__.split('_')[1:])\n",
+    "    print(name)\n",
+    "    for idx in range(10):\n",
+    "        arena_config = ArenaConfig()\n",
+    "        arena_config.arenas[0] = func(t=500)\n",
+    "        filepath = os.path.join(folder_path, '%s_%02d.yaml' % (name, idx))\n",
+    "        with open(filepath, 'w') as f:\n",
+    "            yaml.dump(arena_config, f)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "heading_collapsed": true
+   },
+   "source": [
+    "### Spatial reasoning"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-10-14T17:08:58.231288Z",
+     "start_time": "2019-10-14T17:08:58.218058Z"
+    },
+    "hidden": true
+   },
+   "outputs": [],
+   "source": [
+    "from orangutan.arenas.spatial_reasoning import (\n",
+    "    create_arena_with_death_maze,\n",
+    "    create_arena_with_platform_maze,\n",
+    "    create_arena_with_walls_maze,\n",
+    ")\n",
+    "func_list = [\n",
+    "    create_arena_with_death_maze,\n",
+    "    create_arena_with_platform_maze,\n",
+    "    create_arena_with_walls_maze,\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-10-14T17:09:15.438757Z",
+     "start_time": "2019-10-14T17:09:15.420890Z"
+    },
+    "hidden": true
+   },
+   "outputs": [],
+   "source": [
+    "folder_path = \"/media/guillermo/Data/Dropbox/02 Inteligencia Artificial/31_animalai/orangutan/scripts/test_submission/configs/05_spatial_reasoning\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-10-14T17:09:18.460024Z",
+     "start_time": "2019-10-14T17:09:16.244965Z"
+    },
+    "hidden": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "87f5858bf6bb462087eb780fa1ecde69",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(IntProgress(value=0, max=3), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "arena_with_death_maze\n",
+      "arena_with_platform_maze\n",
+      "arena_with_walls_maze\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "for func in tqdm(func_list):\n",
+    "    name = '_'.join(func.__name__.split('_')[1:])\n",
+    "    print(name)\n",
+    "    for idx in range(10):\n",
+    "        arena_config = ArenaConfig()\n",
+    "        arena_config.arenas[0] = func(t=500)\n",
+    "        filepath = os.path.join(folder_path, '%s_%02d.yaml' % (name, idx))\n",
+    "        with open(filepath, 'w') as f:\n",
+    "            yaml.dump(arena_config, f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
