Started to train new 115_megatrain model

--- a/notebooks/006_automatic_creation_of_arenas.ipynb
+++ b/notebooks/006_automatic_creation_of_arenas.ipynb
@@ -3559,18 +3559,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "## Single file with all categories using weights"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "After training over night and seeing bad results I have come to the conclusion that shorter arenas need to have smaller frequency than long levels.  \n",
     "To do that I have prepared a new script to generate levels.\n",
@@ -3586,7 +3582,6 @@
      "end_time": "2019-10-05T09:26:47.341323Z",
      "start_time": "2019-10-05T09:26:15.589271Z"
     },
-    "hidden": true,
     "scrolled": true
    },
    "outputs": [
@@ -3616,8 +3611,7 @@
     "ExecuteTime": {
      "end_time": "2019-10-06T18:03:20.094241Z",
      "start_time": "2019-10-06T18:02:44.890353Z"
-    },
-    "hidden": true
+    }
    },
    "outputs": [
     {
@@ -3646,8 +3640,7 @@
     "ExecuteTime": {
      "end_time": "2019-10-07T17:40:17.880889Z",
      "start_time": "2019-10-07T17:39:20.133234Z"
-    },
-    "hidden": true
+    }
    },
    "outputs": [
     {
@@ -3694,8 +3687,7 @@
     "ExecuteTime": {
      "end_time": "2019-10-08T16:47:10.230531Z",
      "start_time": "2019-10-08T16:45:50.965063Z"
-    },
-    "hidden": true
+    }
    },
    "outputs": [
     {
@@ -3746,8 +3738,7 @@
     "ExecuteTime": {
      "end_time": "2019-10-09T16:12:26.223176Z",
      "start_time": "2019-10-09T16:11:04.179944Z"
-    },
-    "hidden": true
+    }
    },
    "outputs": [
     {
@@ -3802,8 +3793,7 @@
     "ExecuteTime": {
      "end_time": "2019-10-13T05:44:25.159982Z",
      "start_time": "2019-10-13T05:44:21.223004Z"
-    },
-    "hidden": true
+    }
    },
    "outputs": [
     {
@@ -3834,9 +3824,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
@@ -3847,8 +3835,7 @@
     "ExecuteTime": {
      "end_time": "2019-10-13T16:22:14.899202Z",
      "start_time": "2019-10-13T16:14:08.641481Z"
-    },
-    "hidden": true
+    }
    },
    "outputs": [
     {
@@ -4899,6 +4886,289 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-10-14T18:19:22.252126Z",
+     "start_time": "2019-10-14T18:17:46.761788Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Food: 35\n",
+      "Preferences: 7\n",
+      "Obstacles: 48\n",
+      "Avoidance: 48\n",
+      "Spatial reasoning: 36\n",
+      "Generalization: 64\n",
+      "Internal models: 31\n",
+      "269\n",
+      "Food: 35\n",
+      "Preferences: 7\n",
+      "Obstacles: 48\n",
+      "Avoidance: 48\n",
+      "Spatial reasoning: 36\n",
+      "Generalization: 64\n",
+      "Internal models: 31\n",
+      "269\n",
+      "Food: 35\n",
+      "Preferences: 7\n",
+      "Obstacles: 48\n",
+      "Avoidance: 48\n",
+      "Spatial reasoning: 36\n",
+      "Generalization: 64\n",
+      "Internal models: 31\n",
+      "269\n",
+      "Food: 35\n",
+      "Preferences: 7\n",
+      "Obstacles: 48\n",
+      "Avoidance: 48\n",
+      "Spatial reasoning: 36\n",
+      "Generalization: 64\n",
+      "Internal models: 31\n",
+      "269\n",
+      "Food: 35\n",
+      "Preferences: 7\n",
+      "Obstacles: 48\n",
+      "Avoidance: 48\n",
+      "Spatial reasoning: 36\n",
+      "Generalization: 64\n",
+      "Internal models: 31\n",
+      "269\n",
+      "Food: 35\n",
+      "Preferences: 7\n",
+      "Obstacles: 48\n",
+      "Avoidance: 48\n",
+      "Spatial reasoning: 36\n",
+      "Generalization: 64\n",
+      "Internal models: 31\n",
+      "269\n",
+      "Food: 35\n",
+      "Preferences: 7\n",
+      "Obstacles: 48\n",
+      "Avoidance: 48\n",
+      "Spatial reasoning: 36\n",
+      "Generalization: 64\n",
+      "Internal models: 31\n",
+      "269\n",
+      "Food: 35\n",
+      "Preferences: 7\n",
+      "Obstacles: 48\n",
+      "Avoidance: 48\n",
+      "Spatial reasoning: 36\n",
+      "Generalization: 64\n",
+      "Internal models: 31\n",
+      "269\n",
+      "Food: 35\n",
+      "Preferences: 7\n",
+      "Obstacles: 48\n",
+      "Avoidance: 48\n",
+      "Spatial reasoning: 36\n",
+      "Generalization: 64\n",
+      "Internal models: 31\n",
+      "269\n",
+      "Food: 35\n",
+      "Preferences: 7\n",
+      "Obstacles: 48\n",
+      "Avoidance: 48\n",
+      "Spatial reasoning: 36\n",
+      "Generalization: 64\n",
+      "Internal models: 31\n",
+      "269\n",
+      "Food: 35\n",
+      "Preferences: 7\n",
+      "Obstacles: 48\n",
+      "Avoidance: 48\n",
+      "Spatial reasoning: 36\n",
+      "Generalization: 64\n",
+      "Internal models: 31\n",
+      "269\n",
+      "Food: 35\n",
+      "Preferences: 7\n",
+      "Obstacles: 48\n",
+      "Avoidance: 48\n",
+      "Spatial reasoning: 36\n",
+      "Generalization: 64\n",
+      "Internal models: 31\n",
+      "269\n",
+      "Food: 35\n",
+      "Preferences: 7\n",
+      "Obstacles: 48\n",
+      "Avoidance: 48\n",
+      "Spatial reasoning: 36\n",
+      "Generalization: 64\n",
+      "Internal models: 31\n",
+      "269\n",
+      "Food: 35\n",
+      "Preferences: 7\n",
+      "Obstacles: 48\n",
+      "Avoidance: 48\n",
+      "Spatial reasoning: 36\n",
+      "Generalization: 64\n",
+      "Internal models: 31\n",
+      "269\n",
+      "Food: 35\n",
+      "Preferences: 7\n",
+      "Obstacles: 48\n",
+      "Avoidance: 48\n",
+      "Spatial reasoning: 36\n",
+      "Generalization: 64\n",
+      "Internal models: 31\n",
+      "269\n",
+      "Food: 35\n",
+      "Preferences: 7\n",
+      "Obstacles: 48\n",
+      "Avoidance: 48\n",
+      "Spatial reasoning: 36\n",
+      "Generalization: 64\n",
+      "Internal models: 31\n",
+      "269\n",
+      "Food: 35\n",
+      "Preferences: 7\n",
+      "Obstacles: 48\n",
+      "Avoidance: 48\n",
+      "Spatial reasoning: 36\n",
+      "Generalization: 64\n",
+      "Internal models: 31\n",
+      "269\n",
+      "Food: 35\n",
+      "Preferences: 7\n",
+      "Obstacles: 48\n",
+      "Avoidance: 48\n",
+      "Spatial reasoning: 36\n",
+      "Generalization: 64\n",
+      "Internal models: 31\n",
+      "269\n",
+      "Food: 35\n",
+      "Preferences: 7\n",
+      "Obstacles: 48\n",
+      "Avoidance: 48\n",
+      "Spatial reasoning: 36\n",
+      "Generalization: 64\n",
+      "Internal models: 31\n",
+      "269\n",
+      "Food: 35\n",
+      "Preferences: 7\n",
+      "Obstacles: 48\n",
+      "Avoidance: 48\n",
+      "Spatial reasoning: 36\n",
+      "Generalization: 64\n",
+      "Internal models: 31\n",
+      "269\n",
+      "Food: 35\n",
+      "Preferences: 7\n",
+      "Obstacles: 48\n",
+      "Avoidance: 48\n",
+      "Spatial reasoning: 36\n",
+      "Generalization: 64\n",
+      "Internal models: 31\n",
+      "269\n",
+      "Food: 35\n",
+      "Preferences: 7\n",
+      "Obstacles: 48\n",
+      "Avoidance: 48\n",
+      "Spatial reasoning: 36\n",
+      "Generalization: 64\n",
+      "Internal models: 31\n",
+      "269\n",
+      "Food: 35\n",
+      "Preferences: 7\n",
+      "Obstacles: 48\n",
+      "Avoidance: 48\n",
+      "Spatial reasoning: 36\n",
+      "Generalization: 64\n",
+      "Internal models: 31\n",
+      "269\n",
+      "Food: 35\n",
+      "Preferences: 7\n",
+      "Obstacles: 48\n",
+      "Avoidance: 48\n",
+      "Spatial reasoning: 36\n",
+      "Generalization: 64\n",
+      "Internal models: 31\n",
+      "269\n",
+      "Food: 35\n",
+      "Preferences: 7\n",
+      "Obstacles: 48\n",
+      "Avoidance: 48\n",
+      "Spatial reasoning: 36\n",
+      "Generalization: 64\n",
+      "Internal models: 31\n",
+      "269\n",
+      "Food: 35\n",
+      "Preferences: 7\n",
+      "Obstacles: 48\n",
+      "Avoidance: 48\n",
+      "Spatial reasoning: 36\n",
+      "Generalization: 64\n",
+      "Internal models: 31\n",
+      "269\n",
+      "Food: 35\n",
+      "Preferences: 7\n",
+      "Obstacles: 48\n",
+      "Avoidance: 48\n",
+      "Spatial reasoning: 36\n",
+      "Generalization: 64\n",
+      "Internal models: 31\n",
+      "269\n",
+      "Food: 35\n",
+      "Preferences: 7\n",
+      "Obstacles: 48\n",
+      "Avoidance: 48\n",
+      "Spatial reasoning: 36\n",
+      "Generalization: 64\n",
+      "Internal models: 31\n",
+      "269\n",
+      "Food: 35\n",
+      "Preferences: 7\n",
+      "Obstacles: 48\n",
+      "Avoidance: 48\n",
+      "Spatial reasoning: 36\n",
+      "Generalization: 64\n",
+      "Internal models: 31\n",
+      "269\n",
+      "Food: 35\n",
+      "Preferences: 7\n",
+      "Obstacles: 48\n",
+      "Avoidance: 48\n",
+      "Spatial reasoning: 36\n",
+      "Generalization: 64\n",
+      "Internal models: 31\n",
+      "269\n",
+      "Food: 35\n",
+      "Preferences: 7\n",
+      "Obstacles: 48\n",
+      "Avoidance: 48\n",
+      "Spatial reasoning: 36\n",
+      "Generalization: 64\n",
+      "Internal models: 31\n",
+      "269\n",
+      "Food: 35\n",
+      "Preferences: 7\n",
+      "Obstacles: 48\n",
+      "Avoidance: 48\n",
+      "Spatial reasoning: 36\n",
+      "Generalization: 64\n",
+      "Internal models: 31\n",
+      "269\n"
+     ]
+    }
+   ],
+   "source": [
+    "folderpath = '/media/guillermo/Data/Kaggle/animalai/agents/115_megatrain/train_016_fpoasgi_500'\n",
+    "os.makedirs(folderpath, exist_ok=True)\n",
+    "for idx in range(32):\n",
+    "    arena_config = generate_arena_config(t=500, n=1)\n",
+    "    print(len(arena_config.arenas))\n",
+    "    with open('%s/%03d.yaml' % (folderpath, idx), 'w') as f:\n",
+    "        yaml.dump(arena_config, f)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "heading_collapsed": true
@@ -4929,7 +5199,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "## Creating new tests "
    ]
@@ -4937,7 +5209,8 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true
+    "heading_collapsed": true,
+    "hidden": true
    },
    "source": [
     "### Obstacles"
@@ -5039,7 +5312,8 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true
+    "heading_collapsed": true,
+    "hidden": true
    },
    "source": [
     "### Avoidance"
@@ -5138,7 +5412,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true,
+    "hidden": true
+   },
    "source": [
     "### Spatial reasoning"
    ]
@@ -5150,7 +5427,8 @@
     "ExecuteTime": {
      "end_time": "2019-10-14T18:15:58.934955Z",
      "start_time": "2019-10-14T18:15:58.907938Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -5173,7 +5451,8 @@
     "ExecuteTime": {
      "end_time": "2019-10-14T18:15:59.598705Z",
      "start_time": "2019-10-14T18:15:59.585245Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -5187,7 +5466,8 @@
     "ExecuteTime": {
      "end_time": "2019-10-14T18:16:01.563300Z",
      "start_time": "2019-10-14T18:16:00.325824Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -5230,7 +5510,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": []
   }
