stopped train and launch a new one

--- a/notebooks/006_automatic_creation_of_arenas.ipynb
+++ b/notebooks/006_automatic_creation_of_arenas.ipynb
@@ -41,8 +41,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-10-14T16:39:03.566440Z",
-     "start_time": "2019-10-14T16:39:03.555259Z"
+     "end_time": "2019-10-15T19:29:57.140125Z",
+     "start_time": "2019-10-15T19:29:57.117486Z"
     }
    },
    "outputs": [],
@@ -54,11 +54,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-10-14T16:48:32.515211Z",
-     "start_time": "2019-10-14T16:48:32.452819Z"
+     "end_time": "2019-10-15T19:29:57.806860Z",
+     "start_time": "2019-10-15T19:29:57.421977Z"
     }
    },
    "outputs": [],
@@ -5163,6 +5163,304 @@
     "os.makedirs(folderpath, exist_ok=True)\n",
     "for idx in range(32):\n",
     "    arena_config = generate_arena_config(t=500, n=1)\n",
+    "    print(len(arena_config.arenas))\n",
+    "    with open('%s/%03d.yaml' % (folderpath, idx), 'w') as f:\n",
+    "        yaml.dump(arena_config, f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-10-15T19:33:29.724439Z",
+     "start_time": "2019-10-15T19:32:05.823046Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "4d8704977d7e4ae99a5c51fcc416d36e",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(IntProgress(value=0, max=32), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Food: 33\n",
+      "Preferences: 7\n",
+      "Obstacles: 48\n",
+      "Avoidance: 48\n",
+      "Spatial reasoning: 36\n",
+      "Generalization: 64\n",
+      "Internal models: 31\n",
+      "267\n",
+      "Food: 33\n",
+      "Preferences: 7\n",
+      "Obstacles: 48\n",
+      "Avoidance: 48\n",
+      "Spatial reasoning: 36\n",
+      "Generalization: 64\n",
+      "Internal models: 31\n",
+      "267\n",
+      "Food: 33\n",
+      "Preferences: 7\n",
+      "Obstacles: 48\n",
+      "Avoidance: 48\n",
+      "Spatial reasoning: 36\n",
+      "Generalization: 64\n",
+      "Internal models: 31\n",
+      "267\n",
+      "Food: 33\n",
+      "Preferences: 7\n",
+      "Obstacles: 48\n",
+      "Avoidance: 48\n",
+      "Spatial reasoning: 36\n",
+      "Generalization: 64\n",
+      "Internal models: 31\n",
+      "267\n",
+      "Food: 33\n",
+      "Preferences: 7\n",
+      "Obstacles: 48\n",
+      "Avoidance: 48\n",
+      "Spatial reasoning: 36\n",
+      "Generalization: 64\n",
+      "Internal models: 31\n",
+      "267\n",
+      "Food: 33\n",
+      "Preferences: 7\n",
+      "Obstacles: 48\n",
+      "Avoidance: 48\n",
+      "Spatial reasoning: 36\n",
+      "Generalization: 64\n",
+      "Internal models: 31\n",
+      "267\n",
+      "Food: 33\n",
+      "Preferences: 7\n",
+      "Obstacles: 48\n",
+      "Avoidance: 48\n",
+      "Spatial reasoning: 36\n",
+      "Generalization: 64\n",
+      "Internal models: 31\n",
+      "267\n",
+      "Food: 33\n",
+      "Preferences: 7\n",
+      "Obstacles: 48\n",
+      "Avoidance: 48\n",
+      "Spatial reasoning: 36\n",
+      "Generalization: 64\n",
+      "Internal models: 31\n",
+      "267\n",
+      "Food: 33\n",
+      "Preferences: 7\n",
+      "Obstacles: 48\n",
+      "Avoidance: 48\n",
+      "Spatial reasoning: 36\n",
+      "Generalization: 64\n",
+      "Internal models: 31\n",
+      "267\n",
+      "Food: 33\n",
+      "Preferences: 7\n",
+      "Obstacles: 48\n",
+      "Avoidance: 48\n",
+      "Spatial reasoning: 36\n",
+      "Generalization: 64\n",
+      "Internal models: 31\n",
+      "267\n",
+      "Food: 33\n",
+      "Preferences: 7\n",
+      "Obstacles: 48\n",
+      "Avoidance: 48\n",
+      "Spatial reasoning: 36\n",
+      "Generalization: 64\n",
+      "Internal models: 31\n",
+      "267\n",
+      "Food: 33\n",
+      "Preferences: 7\n",
+      "Obstacles: 48\n",
+      "Avoidance: 48\n",
+      "Spatial reasoning: 36\n",
+      "Generalization: 64\n",
+      "Internal models: 31\n",
+      "267\n",
+      "Food: 33\n",
+      "Preferences: 7\n",
+      "Obstacles: 48\n",
+      "Avoidance: 48\n",
+      "Spatial reasoning: 36\n",
+      "Generalization: 64\n",
+      "Internal models: 31\n",
+      "267\n",
+      "Food: 33\n",
+      "Preferences: 7\n",
+      "Obstacles: 48\n",
+      "Avoidance: 48\n",
+      "Spatial reasoning: 36\n",
+      "Generalization: 64\n",
+      "Internal models: 31\n",
+      "267\n",
+      "Food: 33\n",
+      "Preferences: 7\n",
+      "Obstacles: 48\n",
+      "Avoidance: 48\n",
+      "Spatial reasoning: 36\n",
+      "Generalization: 64\n",
+      "Internal models: 31\n",
+      "267\n",
+      "Food: 33\n",
+      "Preferences: 7\n",
+      "Obstacles: 48\n",
+      "Avoidance: 48\n",
+      "Spatial reasoning: 36\n",
+      "Generalization: 64\n",
+      "Internal models: 31\n",
+      "267\n",
+      "Food: 33\n",
+      "Preferences: 7\n",
+      "Obstacles: 48\n",
+      "Avoidance: 48\n",
+      "Spatial reasoning: 36\n",
+      "Generalization: 64\n",
+      "Internal models: 31\n",
+      "267\n",
+      "Food: 33\n",
+      "Preferences: 7\n",
+      "Obstacles: 48\n",
+      "Avoidance: 48\n",
+      "Spatial reasoning: 36\n",
+      "Generalization: 64\n",
+      "Internal models: 31\n",
+      "267\n",
+      "Food: 33\n",
+      "Preferences: 7\n",
+      "Obstacles: 48\n",
+      "Avoidance: 48\n",
+      "Spatial reasoning: 36\n",
+      "Generalization: 64\n",
+      "Internal models: 31\n",
+      "267\n",
+      "Food: 33\n",
+      "Preferences: 7\n",
+      "Obstacles: 48\n",
+      "Avoidance: 48\n",
+      "Spatial reasoning: 36\n",
+      "Generalization: 64\n",
+      "Internal models: 31\n",
+      "267\n",
+      "Food: 33\n",
+      "Preferences: 7\n",
+      "Obstacles: 48\n",
+      "Avoidance: 48\n",
+      "Spatial reasoning: 36\n",
+      "Generalization: 64\n",
+      "Internal models: 31\n",
+      "267\n",
+      "Food: 33\n",
+      "Preferences: 7\n",
+      "Obstacles: 48\n",
+      "Avoidance: 48\n",
+      "Spatial reasoning: 36\n",
+      "Generalization: 64\n",
+      "Internal models: 31\n",
+      "267\n",
+      "Food: 33\n",
+      "Preferences: 7\n",
+      "Obstacles: 48\n",
+      "Avoidance: 48\n",
+      "Spatial reasoning: 36\n",
+      "Generalization: 64\n",
+      "Internal models: 31\n",
+      "267\n",
+      "Food: 33\n",
+      "Preferences: 7\n",
+      "Obstacles: 48\n",
+      "Avoidance: 48\n",
+      "Spatial reasoning: 36\n",
+      "Generalization: 64\n",
+      "Internal models: 31\n",
+      "267\n",
+      "Food: 33\n",
+      "Preferences: 7\n",
+      "Obstacles: 48\n",
+      "Avoidance: 48\n",
+      "Spatial reasoning: 36\n",
+      "Generalization: 64\n",
+      "Internal models: 31\n",
+      "267\n",
+      "Food: 33\n",
+      "Preferences: 7\n",
+      "Obstacles: 48\n",
+      "Avoidance: 48\n",
+      "Spatial reasoning: 36\n",
+      "Generalization: 64\n",
+      "Internal models: 31\n",
+      "267\n",
+      "Food: 33\n",
+      "Preferences: 7\n",
+      "Obstacles: 48\n",
+      "Avoidance: 48\n",
+      "Spatial reasoning: 36\n",
+      "Generalization: 64\n",
+      "Internal models: 31\n",
+      "267\n",
+      "Food: 33\n",
+      "Preferences: 7\n",
+      "Obstacles: 48\n",
+      "Avoidance: 48\n",
+      "Spatial reasoning: 36\n",
+      "Generalization: 64\n",
+      "Internal models: 31\n",
+      "267\n",
+      "Food: 33\n",
+      "Preferences: 7\n",
+      "Obstacles: 48\n",
+      "Avoidance: 48\n",
+      "Spatial reasoning: 36\n",
+      "Generalization: 64\n",
+      "Internal models: 31\n",
+      "267\n",
+      "Food: 33\n",
+      "Preferences: 7\n",
+      "Obstacles: 48\n",
+      "Avoidance: 48\n",
+      "Spatial reasoning: 36\n",
+      "Generalization: 64\n",
+      "Internal models: 31\n",
+      "267\n",
+      "Food: 33\n",
+      "Preferences: 7\n",
+      "Obstacles: 48\n",
+      "Avoidance: 48\n",
+      "Spatial reasoning: 36\n",
+      "Generalization: 64\n",
+      "Internal models: 31\n",
+      "267\n",
+      "Food: 33\n",
+      "Preferences: 7\n",
+      "Obstacles: 48\n",
+      "Avoidance: 48\n",
+      "Spatial reasoning: 36\n",
+      "Generalization: 64\n",
+      "Internal models: 31\n",
+      "267\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "folderpath = '/media/guillermo/Data/Kaggle/animalai/agents/116_megatrain/train_017_fpoasgi_750'\n",
+    "os.makedirs(folderpath, exist_ok=True)\n",
+    "for idx in tqdm(range(32)):\n",
+    "    arena_config = generate_arena_config(t=750, n=1)\n",
     "    print(len(arena_config.arenas))\n",
     "    with open('%s/%03d.yaml' % (folderpath, idx), 'w') as f:\n",
     "        yaml.dump(arena_config, f)"
